--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,16 @@
 
+<html>
+<title>
+ProtiaX website 
+</title>
+<body>
+<h1>ProtiaX website</h1>
+</body>
+<style>
+body(
+background.color:green;
+color:afff;
+text-align:center;
+)   
+</style>
+</html>
