--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,10 @@ ProtiaX website
 <h1>ProtiaX website</h1>
 </body>
 <style>
-body(
+body{
 background.color:green;
 color:afff;
 text-align:center;
-)   
+  }  
 </style>
 </html>
