--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,11 @@ ProtiaX website
 <h1>ProtiaX website</h1>
 </body>
 <style>
-body(
+body {
 background.color:green;
-color:afff;
+color:#fff;
 text-align:center;
-)   
+}
+   
 </style>
 </html>
