--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,17 @@
 
 <html>
-<title>
-ProtiaX website 
-</title>
-<body>
-<h1>ProtiaX website</h1>
-</body>
-<style>
-body{
-background.color:green;
-color:#fff;
-text-align:center;
-  }  
-</style>
-</html>
+  <title>
+    ProtiaX website
+    </title>
+  <body>
+    <h1>Protiax website</h1>
+    </body>
+  <style>
+    body {
+    background.color:green;
+    color:#fff;
+    text-align:center;
+    }
+    </style>
+  </html>
+
